Resized board. Added new mouse functions.

--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,4 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 /Sudoku CS/Content/background2.png
+/Sudoku CS/Content/background3.png
