--- a/Sudoku CS/Sudoku CS.csproj
+++ b/Sudoku CS/Sudoku CS.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Block.cs" />
     <Compile Include="Board.cs" />
+    <Compile Include="Button.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="MouseInput.cs" />
     <Compile Include="Program.cs" />
