--- a/Sudoku CS/Sudoku CS.csproj
+++ b/Sudoku CS/Sudoku CS.csproj
@@ -45,9 +45,12 @@
     <Compile Include="Board.cs" />
     <Compile Include="Button.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="GameState.cs" />
+    <Compile Include="MenuState.cs" />
     <Compile Include="MouseInput.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="State.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
