--- a/Sudoku CS/Sudoku CS.csproj
+++ b/Sudoku CS/Sudoku CS.csproj
@@ -48,6 +48,7 @@
     <Compile Include="GameState.cs" />
     <Compile Include="MenuState.cs" />
     <Compile Include="MouseInput.cs" />
+    <Compile Include="NewPuzzleState.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State.cs" />
